# tauri-tic-tac-toe

./: README.md
frontend/: Cargo.toml
frontend/public/: main.css
frontend/src/: board.rs  button.rs  button.rs.old  main.rs  main.rs.old
src-tauri/: Cargo.toml  tauri.conf.json
