[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
yew-router = "0.16.0"
wasm-bindgen = "0.2.78"
web-sys = { version = "0.3.55", features = ["Element", "HtmlCollection", "NodeList"] }
wasm-bindgen-futures = "0.4.28"
js-sys = "0.3.55"
gloo = "0.8"
gloo-utils = "0.2.0"
